# gpu_comp_hmm_regime

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/bench/: scaling_T_100100_dims.txt  scaling_T_10100_dims.txt  scaling_T_1024_dims.txt  scaling_T_1100_dims.txt  scaling_T_11100_dims.txt  scaling_T_12100_dims.txt  scaling_T_128_dims.txt  scaling_T_13100_dims.txt  scaling_T_14100_dims.txt  scaling_T_15100_dims.txt  scaling_T_16100_dims.txt  scaling_T_16384_dims.txt  scaling_T_17100_dims.txt  scaling_T_18100_dims.txt  scaling_T_19100_dims.txt  scaling_T_20100_dims.txt  scaling_T_2048_dims.txt  scaling_T_2100_dims.txt  scaling_T_21100_dims.txt  scaling_T_22100_dims.txt  scaling_T_23100_dims.txt  scaling_T_24100_dims.txt  scaling_T_25100_dims.txt  scaling_T_256_dims.txt  scaling_T_26100_dims.txt  scaling_T_27100_dims.txt  scaling_T_28100_dims.txt  scaling_T_29100_dims.txt  scaling_T_30100_dims.txt  scaling_T_3100_dims.txt  scaling_T_31100_dims.txt  scaling_T_32100_dims.txt  scaling_T_32768_dims.txt  scaling_T_33100_dims.txt  scaling_T_34100_dims.txt  scaling_T_35100_dims.txt  scaling_T_36100_dims.txt  scaling_T_37100_dims.txt  scaling_T_38100_dims.txt  scaling_T_39100_dims.txt  (+70 more)
data/finance/: sp500_obs_dims.txt
data/processed/: observations_info.json
doc/: CMakeLists.txt
include/cpu/: algo_hmm.hpp  algo_hmm_cpu.hpp  linalg_cpu.hpp  low_level_linear_algebra.hpp
include/cuda/: algo_hmm_gpu.cuh
include/cuda/kernels/: baum_welch_kernels.cuh  hmm_primitives.cuh  hmm_semirings.cuh  potential_kernels.cuh  scan_kernels.cuh  viterbi_kernels.cuh
results/benchmarks/: cpu_benchmark_results.csv  cpu_benchmark_results.json  gpu_benchmark_results.csv  gpu_benchmark_results.json  gpu_nsight_results.csv  gpu_nsight_results.json  hmmlearn_benchmark_results.csv  hmmlearn_benchmark_results.json
results/figures/: benchmark_summary.txt
results/logs/: full_36930.err  full_36930.out  full_36931.err  full_36931.out  full_36933.err  full_36933.out  full_36934.out  full_36935.out  full_36936.err  full_36936.out  full_36937.err  full_36937.out  full_36938.out  full_36939.out  full_36940.out  full_36941.out  full_36942.out  full_36943.out  full_36944.out  full_37076.out  gpu_36369.err  gpu_36369.out  gpu_36370.err  gpu_36370.out  gpu_36371.err  gpu_36371.out  gpu_36374.err  gpu_36374.out  gpu_36377.err  gpu_36377.out  gpu_36380.err  gpu_36380.out  gpu_36382.err  gpu_36382.out  gpu_36383.out  gpu_36387.err  gpu_36387.out  gpu_36428.out  gpu_36429.err  gpu_36429.out  (+80 more)
scripts/: analyze_profile.sh  run_cpu_profiling.sh
scripts/cluster/: README.md  cancel_jobs.sh  check_status.sh  download_logs.sh  download_profiling_results.sh  interactive_gpu.sh  submit_gpu_job.sh  submit_profiling_job.sh
scripts/python/: README.md  analyze_benchmark_results.py  analyze_profiling.py  benchmark_hmmlearn.py  eda.ipynb  fetch_sp500_data.py  generate_benchmark_data.py  generate_validation_data.py  prepare_data.py  profiling_notebook.ipynb  requirements.txt  setup_venv.sh
scripts/python/golden_data/: dims.txt
src/: CMakeLists.txt  main.cpp
src/cpu/: CMakeLists.txt  algo_hmm.cpp  algo_hmm_cpu.cpp  linalg_cpu.cpp  low_level_linear_algebra.cpp
src/cuda/: CMakeLists.txt  algo_hmm_gpu.cu
src/cuda/kernels/: CMakeLists.txt  baum_welch_kernels.cu  potential_kernels.cu  scan_kernels.cu  viterbi_kernels.cu
test/: CMakeLists.txt
test/common/: cuda_timing.cuh  data_loader.hpp  profiling_utils_cpu.hpp  profiling_utils_gpu.cuh  test_utils.hpp
test/cpu/: test_finance_cpu.cpp  test_hmm_algorithms_cpu.cpp  test_linear_algebra_cpu.cpp  test_profile_cpu.cpp  test_profile_cpu_robust.cpp  test_real_data_cpu.cpp  test_stats_cpu.cpp  test_stress_cpu.cpp
test/cuda/: test_baum_welch_gpu.cu  test_finance_gpu.cu  test_forward_backward_gpu.cu  test_profile_gpu_robust.cu  test_real_data.cu  test_viterbi_gpu.cu
